タイトルの変更

--- a/assessment.html
+++ b/assessment.html
@@ -13,7 +13,7 @@
         content="ZEN Study Web アプリケーション開発コースで制作した、「あなたのいいところ診断」サイトです。"
       >
       <link rel="stylesheet" href="assessment.css">
-      <title>あなたの良いところ診断</title>
+      <title>すすむが作った良いところ診断</title>
     </head>
     <body>
       <h1>あなたの良いところは？</h1>
