--- a/assessment.html
+++ b/assessment.html
@@ -12,16 +12,39 @@
         property="og:description"
         content="ZEN Study Web アプリケーション開発コースで制作した、「あなたのいいところ診断」サイトです。"
       >
-      <link rel="stylesheet" href="assessment.css">
+          <meta name="viewport" content="width=device-width, initial-scale=1.0">
+          <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha256-fx038NkLY4U1TCrBDiu5FWPEa9eiZu01EiLryshJbCo=" crossorigin="anonymous">
       <title>すすむが作った良いところ診断</title>
     </head>
-    <body>
-      <h1>あなたの良いところは？</h1>
-      <p>診断したい名前を入力してください</p>
-      <input type="text" name="" id="user-name" size="40" maxlength="20" placeholder="20文字以内で入力してください">
-      <button id="assessment">診断する</button>
-      <div id="result-area"></div>
-      <div id="tweet-area"></div>
+    <body class="bg-success">
+      <header>
+        <nav class="navbar bg-primary" data-bs-theme="dark">
+            <div class="container-fluid">
+            <a href="#" class="navbar-brand">あなたのいいところ診断</a>
+          </div>
+        </nav>
+      </header>
+
+      <div class="container pt-5">
+        <h1 class="text-light">あなたの良いところは？</h1>
+      <p class="text-light"> 診断したい名前を入力してください</p>
+
+      <div class="row">
+        <div class="col-sm-9" col-lg-6>
+          <div class="input-group mb-3">
+            <input type="text" class="form-control" name="" id="user-name" size="40" maxlength="20" placeholder="20文字以内で入力してください">
+            <button class="btn btn-primary" id="assessment">診断する</button>
+          </div>
+        </div>
+      </div>
+        
+        <div class="row">
+          <div class="col-lg-9">
+            <div id="result-area"></div>
+          </div>
+        </div>
+        <div id="tweet-area" class="mt-3"></div>
+      </div>
       <script src="assessment.js"></script>
     </body>
   </html>
